--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -931,6 +931,9 @@ margin-bottom: 24px;
     height: 30px;
     font-size: 12px;
   }
+  .main-volunteer-section{
+    margin-top: 40px;
+  }
 }
 
 @media only screen and (max-width: 576px) {
@@ -959,6 +962,7 @@ margin-bottom: 24px;
 }
 .main-volunteer-section{
   background-color: rgba(222, 227, 230, 0.5);
+  margin-top: 120px;
 }
 .volun-txt{
   color: #E27832;
