--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1889,7 +1889,7 @@ color: #E27832;
     text-align: center;
   }
   .css-z7ff2d {
-    margin-top: 31px;
+    margin-top: 31px !important;
   }
   .step1-txt{
     font-size: 22px;
