organization listings validations and payment method validations

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2038,3 +2038,16 @@ color: #E27832;
     width: 100%;
   }
 } */
+
+.input-error {
+  border: 1px solid red !important;
+}
+
+.error-message {
+  color: red;
+  font-size: 14px;
+}
+
+.payment-error-message {
+  color: red;
+}
