responsive organization page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1890,6 +1890,9 @@ color: #E27832;
 .blog-card-shadow{
   box-shadow: 0 4px 5px rgba(0,0,0,.15)!important;
 }
+.wel-dashboard .my-sidebar{
+  width: 100%;
+}
 
 @media screen and (min-width:1400px){
   .passionate-vol .volunteer-card-row1{
@@ -1926,6 +1929,12 @@ color: #E27832;
 @media (max-width: 600px) {
   .view-blog-btn {
     width: 312px;
+  }
+  .welc-txt {
+    font-size: 41px;
+  }
+  .welc-txt2 {
+    font-size: 41px;
   }
   .nav-login-btn{
     width: 100px !important;
@@ -2056,6 +2065,12 @@ color: #E27832;
 }
 
 @media (max-width: 768px){
+  .wel-dashboard .my-sidebar {
+    width: 100%;
+    position: absolute;
+    z-index: 1;
+    margin-top: 24px;
+    }
   .charities-stpe-content p:first-child{
     font-size: 32px !important;
     font-weight: bold !important;
