fix responsiveness issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1873,7 +1873,7 @@ color: #E27832;
   padding: 20px 7px 20px 7px;
   border: 1px solid black;
   width: 300px;
-  min-height: 491px;
+  min-height: 496px;
 }
 .charity-card h1{
   font-size: 24px;
@@ -1896,6 +1896,9 @@ color: #E27832;
 .organization-dash .my-sidebar{
   width: 100%;
 }
+.conveient-access p{
+  padding:0 36px;
+}
 
 @media screen and (min-width:1400px){
   .passionate-vol .volunteer-card-row1{
@@ -1909,7 +1912,7 @@ color: #E27832;
     gap: 2rem !important;
   }
   .charity-card {
-    min-height: 458px;
+    min-height: 504px;
 }
 }
 @media screen and (max-width:1199px){
@@ -1935,6 +1938,9 @@ color: #E27832;
   }
   .welc-txt {
     font-size: 41px;
+  }
+  .conveient-access p{
+    padding:0 24px;
   }
   .welc-txt2 {
     font-size: 41px;
