--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1181,6 +1181,7 @@ font-weight: 700;
 }
 .nav-login-btn{
   width: 145px !important;
+  height: 36px !important;
 }
 .select-btn{
   width: 163px;
@@ -1909,13 +1910,13 @@ color: #E27832;
   margin: 85px 0;
 }
 .guide-sub-heading{
-  font-size: 36px;
+  font-size: 34px;
   font-weight: 700;
   color: #183553;
 }
 .community-guideline{
   font-size: 24px;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 @media screen and (min-width:1400px){
