--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1181,6 +1181,9 @@ font-weight: 700;
 .preferred-company{
   padding: 1.375rem .75rem;
 }
+.preferred-company ::placeholder{
+  color: #BDBDBD !important;
+}
 .nav-login-btn{
   width: 145px !important;
   height: 36px !important;
@@ -1954,6 +1957,14 @@ color: #E27832;
   width: 2em;
   height: 2em;
 }
+.about-more-people{
+  color: #212121 !important;
+  font-size: 22px !important;
+  font-weight: 600 !important;
+  max-width: 73% !important;
+  margin-top: 80px !important;
+  line-height: 1.3 !important;
+}
 
 
 @media screen and (min-width:1400px){
@@ -2073,6 +2084,7 @@ color: #E27832;
   .about-more-people{
     font-size: 16px !important;
     margin-top: 50px !important;
+    max-width: 100% !important;
   }
   .parental{
     font-size: 30px;
