--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1965,9 +1965,21 @@ color: #E27832;
   margin-top: 80px !important;
   line-height: 1.3 !important;
 }
+.donation-card{
+  box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.18);
+  border-radius: 17px;
+  padding: 50px 32px 13px 32px;
+  min-height: 375px;
+}
+.donation-card .whishlist{
+  top: -9px !important;
+}
 
 
 @media screen and (min-width:1400px){
+  .donation-card{
+    padding: 50px 37px 13px 37px;
+  }
   .passionate-vol .volunteer-card-row1{
       padding: 50px;
       gap: 2rem !important;
