--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2508,3 +2508,6 @@ color: #E27832;
 }
 
 /* ------------------------------------------------- */
+.profile-transactions {
+  margin-right: 10px;
+}
